feat: add sensor CRUD
The whole API structure needs refactoring in the future
