# src/main/java/org/STPP/AgriAutomation/api/controllers/SensorController.java
@@ -1,0 +1,70 @@
+package org.STPP.AgriAutomation.api.controllers;
+
+import java.util.List;
+
+import org.STPP.AgriAutomation.api.services.SensorService;
+import org.STPP.AgriAutomation.data.models.Sensor;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/sensors")
+public class SensorController {
+
+    private final SensorService sensorService;
+
+    @Autowired 
+    public SensorController(SensorService sensorService) {
+        this.sensorService = sensorService;
+    }
+
+    @GetMapping
+    public ResponseEntity<List<Sensor>> getAllSensors(){
+        return ResponseEntity.ok(sensorService.getAllSensors());
+    }
+
+    @GetMapping("/{id}")
+    public ResponseEntity<Sensor> getSensor(@PathVariable Integer id){
+        Sensor sensor = sensorService.getSensor(id);
+        if(sensor != null){
+            return ResponseEntity.ok(sensor);
+        } else {
+            return ResponseEntity.notFound().build();
+        }
+    }
+
+    @PostMapping
+    public ResponseEntity<Sensor> createSensor(@RequestBody Sensor sensor){
+        Sensor createdSensor = sensorService.addSensor(sensor);
+        return ResponseEntity.status(201).body(createdSensor);
+    }
+
+    @PutMapping("/{id}")
+    public ResponseEntity<Sensor> updateSensor(@PathVariable Integer id, @RequestBody Sensor updatedSensor){
+        if(sensorService.sensorExists(id)) {
+            updatedSensor.setId(id);
+            Sensor sensor = sensorService.updateSensor(updatedSensor);
+            return ResponseEntity.ok(sensor);
+        } else {
+            return ResponseEntity.notFound().build();
+        }
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> deleteSensor(@PathVariable Integer id) {
+        if(sensorService.sensorExists(id)) {
+            sensorService.removeSensor(id);
+            return ResponseEntity.noContent().build();
+        } else {
+            return ResponseEntity.notFound().build();
+        }
+    }
+}
